--- a/index.html
+++ b/index.html
@@ -4,43 +4,46 @@
 <head>
   <meta charset="utf-8">
   <title>mazdie for life</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
-  <tr>
-    <td><img src="img/mazdie.png" alt="Yup, that's me. I was able to smile back then"></td>
-    <td><h1>mazdie</h1>
-  <p><em>I am an old pathetic fatty who achieved nothing in his 35 and <strong>is trying to make a difference</strong> now.</em></p>
-  <p>I play guitar, drink beer and teach English. That's mostly it. What else did you expect? Told ya I'm pathetic.</p></td>
-  </tr>
+    <tr>
+      <td><img src="img/mazdie.png" alt="Yup, that's me. I was able to smile back then"></td>
+      <td>
+        <h1>mazdie</h1>
+        <p><em>I am an old pathetic fatty who achieved nothing in his 35 and <strong>is trying to make a difference</strong> now.</em></p>
+        <p>I play guitar, drink beer and teach English. That's mostly it. What else did you expect? Told ya I'm pathetic.</p>
+      </td>
+    </tr>
   </table>
 
 
-<hr>
-<h3>What do I like to do</h3>
-<ul>
-  <li><a href="img/videogame.png">I like <s>playing videogames</s> buying consoles and videogames that I will never play</a></li>
-  <li>Little plesures of life:</li>
+  <hr>
+  <h3>What do I like to do</h3>
   <ul>
-    <li><a href="img/eat.png">I like eating</a></li>
-    <li><a href="img/sleep.png">I like sleeping</a></li>
-    <li><a href="img/bummer.png">I like feeling myself</a></li>
+    <li><a href="img/videogame.png">I like <s>playing videogames</s> buying consoles and videogames that I will never play</a></li>
+    <li>Little plesures of life:</li>
+    <ul>
+      <li><a href="img/eat.png">I like eating</a></li>
+      <li><a href="img/sleep.png">I like sleeping</a></li>
+      <li><a href="img/bummer.png">I like feeling myself</a></li>
+    </ul>
+    <li><a href="img/money.png">I like teaching English when it pays off</a></li>
   </ul>
-  <li><a href="img/money.png">I like teaching English when it pays off</a></li>
-</ul>
-<hr>
-<h3>What do I want to achieve</h3>
-<ol>
-  <li>I want to work where I live, not live where I work</li>
-  <li>I want to earn enough to provide for my current and future family</li>
-  <li>I want to treat myself with some juicy stuff</li>
-  <li>I want to finally learn how to drive and buy something to drive</li>
-</ol>
-<hr>
-<a href="skills.html">Skills</a>
-<br>
-<a href="contacts.html">Contact Me</a>
+  <hr>
+  <h3>What do I want to achieve</h3>
+  <ol>
+    <li>I want to work where I live, not live where I work</li>
+    <li>I want to earn enough to provide for my current and future family</li>
+    <li>I want to treat myself with some juicy stuff</li>
+    <li>I want to finally learn how to drive and buy something to drive</li>
+  </ol>
+  <hr>
+  <a href="skills.html">Skills</a>
+  <br>
+  <a href="contacts.html">Contact Me</a>
 </body>
 
 </html>
