--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
       <!-- Navigation Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="">E-kids</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">Your kids will be happy to study with us.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
 
         <div class="col-lg-6">
@@ -157,7 +157,7 @@
     <div class="row">
 
       <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card h-100">
+        <div class="card h-100 price">
           <div class="card-header">
             <h3>Demo-lesson</h3>
           </div>
@@ -166,13 +166,13 @@
             <p>Come and try</p>
             <p>Meet our teachers</p>
             <p>Check our classroom</p>
-            <button type="button" class="w-100 btn btn-lg btn-outline-dark">Register</button>
+            <button type="button" class="w-100 btn btn-lg btn-dark">Register</button>
           </div>
         </div>
       </div>
 
       <div class="pricing-column col-lg-4 col-md-6">
-        <div class="card h-100">
+        <div class="card h-100 price">
           <div class="card-header">
             <h3>Young listener</h3>
           </div>
@@ -187,7 +187,7 @@
       </div>
 
       <div class="pricing-column col col-lg-4">
-        <div class="card h-100">
+        <div class="card h-100 price">
           <div class="card-header">
             <h3>Young learner</h3>
           </div>
